Update to Camunda BPM 7.13.0 (and remove FAQ entry which is now obsolete)